updating portfolio json image for TableTurner project three inclusion. beginning adjustments on spacing issues that are excessive and will display better in a mobile setting.

--- a/src/components/HeroImage/HeroImage.css
+++ b/src/components/HeroImage/HeroImage.css
@@ -4,6 +4,48 @@
 
 } */
 
+/* current attempts
+
+.heroIMAGE {
+    
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+    background-image: url("https://github.com/jonathanschimpf/React-Portfolio/blob/main/public/images/jon_berks_crop.jpg?raw=true");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: scroll;
+
+    }
+
+.heroHEIGHT {
+
+    height: 800px;
+    position: relative;
+    overflow: hidden;
+
+} */
+
+
+
+/* try these browser specific options  */
+
+/* body {
+    background: url(image url) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    height: 100%;
+    overflow: hidden;
+} */
+
+
+
+
+/* initially */
+
 .heroIMAGE {
     
     width: 100%;
@@ -21,6 +63,5 @@
 
     height: 800px;
     position: relative;
-    overflow: hidden;
-
+    overflow: hidden; 
 }
